Updated exceptions. Added enums.